--- a/forecasting_the_happiness_index_2024.ipynb
+++ b/forecasting_the_happiness_index_2024.ipynb
@@ -7,11 +7,12 @@
     "># <center>Аналитический отчёт: прогнозирование индекса счастья</center>\n",
     "\n",
     "<center><img src=\"c592cd7e5df0bfaa574011387f6e84e4.jpg\" width=\"500\"></center>\n",
+    "\n",
     "># Описание данных\n",
-    ">\n",
-    ">Данные были разбиты на две группы:\n",
-    "* обучающий набор (train.csv)\n",
-    "* тестовый набор (test.csv)\n",
+    "\n",
+    "> Данные были разбиты на две группы:\n",
+    "- **обучающий набор (train.csv)**\n",
+    "- **тестовый набор (test.csv)**\n",
     "\n",
     "Обучающий набор должен использоваться для построения моделей машинного обучения.Тестовый набор используется для проверки того, насколько хорошо ваша модель работает на неизвестных данных."
    ],
